cmake_minimum_required(VERSION 3.0)

message("${Green}Start processing ${CMAKE_CURRENT_LIST_FILE}...${ColorReset}")

#add_subdirectory(core/)
# add_subdirectory(q_decoder/)
# add_subdirectory(q_tech_ind/)
# add_subdirectory(q_tech_dep/)
# add_subdirectory(analog_digital_interface/)
# add_subdirectory(assemble_instruction_test/)
# add_subdirectory(classical/)
add_subdirectory(socket)
